# inspect_wandb

./: .pre-commit-config.yaml  .readthedocs.yaml  README.md  hellaswag.py  mypy.ini  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: checks.yml
docs/source/: conf.py  index.md  index.rst  installation.md
inspect_wandb/: __init__.py  _registry.py  providers.py
inspect_wandb/config/: extras_manager.py  settings.py  settings_loader.py
inspect_wandb/hooks/: __init__.py  model_hooks.py  weave_hooks.py
inspect_wandb/models/: hooks.py
inspect_wandb/weave/: hooks.py  utils.py
inspect_weave/: __init__.py  _registry.py  custom_evaluation_logger.py  exceptions.py  hooks.py  providers.py  utils.py
inspect_weave/config/: settings.py  settings_loader.py
inspect_weave/hooks/: __init__.py  model_hooks.py  utils.py  weave_hooks.py
inspect_weave/weave_custom_overrides/: autopatcher.py  custom_evaluation_logger.py
tests/: conftest.py  conftest_weave_client.py  test_autopatcher.py  test_e2e.py  test_extras.py  test_hooks.py  test_models_hooks.py  test_settings.py  test_settings_loader.py  test_utils.py  test_weave_hooks.py
tests/test_models/: test_hooks.py
tests/test_weave/: test_autopatcher.py  test_e2e.py  test_hooks.py  test_utils.py
wandb/: inspect-weave-settings.yaml
